--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <body>
   <div class="logo text-center mb-4 border-bottom pb-3" 
     style="border-color: #ff3c3c;">
-    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgn47Htl8rZkop10CXrSjkn7Y9zA07Zdh1athN4qyFMx7VQtvqTcaxYT6cEjUKytO-hOvJT3nbKuIJZsUAgbouV4CRSahlPAXnyFmolO3mhdZwXR0W0WlkXYXQIJn-X8pe0lUoVCUbA14neQbccB4yTO2zutHj1jSjt33Z7BylqbBQSU7e_vw2w1AK5pbvf/s600/logo.png" alt="X Fire Flix Logo" height="80" class="mb-2">
-    <h3 style="font-weight: bold; color: #ff3c3c;">CricHD <span style="color: white;">| by</span> X Fire Flix</h3>
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgn47Htl8rZkop10CXrSjkn7Y9zA07Zdh1athN4qyFMx7VQtvqTcaxYT6cEjUKytO-hOvJT3nbKuIJZsUAgbouV4CRSahlPAXnyFmolO3mhdZwXR0W0WlkXYXQIJn-X8pe0lUoVCUbA14neQbccB4yTO2zutHj1jSjt33Z7BylqbBQSU7e_vw2w1AK5pbvf/s600/logo.png" alt="Rs Live Logo" height="80" class="mb-2">
+    <h3 style="font-weight: bold; color: #ff3c3c;">CricHD <span style="color: white;">| by</span>Rs Live</h3>
   </div>
 
   <div class="container">
@@ -111,7 +111,7 @@
   </div>
 
   <footer class="text-center mt-4 py-3 bg-danger text-white">
-    © 2025 X Fire Flix. All rights reserved.
+    © 2025 Rs Live. All rights reserved.
   </footer>
 
   <script>
@@ -148,7 +148,7 @@
     telegramOverlay.style.transition = 'all 0.3s ease';
 
     telegramOverlay.innerHTML = `
-      <a href="https://t.me/xfireflix" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: white;">
+      <a href="https://t.me/rslivetv" target="_blank" style="display: flex; align-items: center; text-decoration: none; color: white;">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 20px; height: 20px; margin-right: 8px;">
         <span style="font-weight: bold;">Join us on Telegram</span>
       </a>
